25/10/2024  arreglo de detalle

--- a/DetalleSerie.html
+++ b/DetalleSerie.html
@@ -89,7 +89,7 @@
                     html += "<ul>";
                     html += "<li><img src='" + data.imagen + "' /></li>";
                     html += "<li>" + data.nombre + "</li>";
-                    html += "<li>" + data.direccion + "</li>";
+                    html += "<li>" + data.puntuacion + "</li>";
                     html += "</ul>";
                     html += "<td><a href='DetallePersonajesSerie.html?idserie=" + data.idSerie + "' class='btn btn-info'>Personajes</a>";
                     $("#listaSerie").html(html);
